package ITMO.Lab5.model;

/**
 * Primary weapon type.
 */
public enum Weapon {
    MELTAGUN,
    COMBI_FLAMER,
    GRENADE_LAUNCHER
}
